-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: hotspot
-
b12
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8086483 | 8u65 | Lois Foltan | P3 | Resolved | Fixed | b01 |
| JDK-8137567 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8078932 | emb-8u60 | Lois Foltan | P3 | Resolved | Fixed | team |
/classLoadingService.cpp: In static member function ‘static void ClassLoadingService::notify_class_loaded(InstanceKlass*, bool)’:
src/share/vm/services/classLoadingService.cpp:144: error: cannot reload integer constant operand in ‘asm’
src/share/vm/services/classLoadingService.cpp:144: error: cannot reload integer constant operand in ‘asm’
gcc version:
gcc (GCC) 4.4.6 20120305 (Red Hat 4.4.6-4)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
src/share/vm/services/classLoadingService.cpp:144: error: cannot reload integer constant operand in ‘asm’
src/share/vm/services/classLoadingService.cpp:144: error: cannot reload integer constant operand in ‘asm’
gcc version:
gcc (GCC) 4.4.6 20120305 (Red Hat 4.4.6-4)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
- backported by
-
JDK-8078932 hotspot build failed with gcc version Red Hat 4.4.6-4
-
- Resolved
-
-
JDK-8086483 hotspot build failed with gcc version Red Hat 4.4.6-4
-
- Resolved
-
-
JDK-8137567 hotspot build failed with gcc version Red Hat 4.4.6-4
-
- Resolved
-
- relates to
-
JDK-8185900 hotspot build failed with gcc version Red Hat 4.4.7-3
-
- Resolved
-