8047382: hotspot build failed with gcc version Red Hat 4.4.6-4. Summary: Removed the Solaris specific conditionalization for casting to void * within calls to HS_DTRACE_PROBE* to enable successful compilation with gcc Red Hat 4.4.6-4. Reviewed-by: hseigel, stefank